--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,10 +1,16 @@
+.login-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
   width: 50%;
   justify-content: center;
   align-items: center;
-  margin-left: 25%;
 }
 
 .form-element {
@@ -14,4 +20,117 @@
 
 .error-message {
   color: red;
+}
+
+button {
+  background-color: #eee;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  color: #444;
+  cursor: pointer;
+  display: block;
+  font-size: 22px;
+  font-size: var(--mobile-font-size);
+  font-weight: 500;
+  margin: 3px 0 0 0;
+  padding: 10px;
+}
+
+button:hover {
+  background-color: #ccc;
+  color: black;
+}
+
+button#logIn {
+  margin: 0px 0 0 0;
+}
+
+button#toggle-password {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-weight: 300;
+  padding: 0;
+  position: absolute;
+  top: -4px;
+  right: -2px;
+}
+
+form {
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+h1 {
+  border-bottom: 1px solid #ccc;
+  font-size: 28px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+  padding: 0 0 5px 0;
+}
+
+input {
+  border: 1px solid #ccc;
+  font-size: 22px; /* fallback */
+  font-size: var(--mobile-font-size);
+  padding: 15px;
+  width: 90%; /* fallback */
+  width: calc(100% - 30px); /* full width minus padding */
+}
+
+input[type="email"]:not(:focus):invalid,
+input[type="password"]:not(:focus):invalid {
+  color: red;
+  outline-color: red;
+}
+
+label {
+  display: block;
+  font-size: 20px;
+  font-size: var(--mobile-font-size);
+  font-weight: 500;
+  margin: 0 0 3px 0;
+}
+
+form section {
+  margin: 0 0 20px 0;
+  position: relative; /* for password toggle positioning */
+}
+
+@media (min-width: 450px) {
+  body {
+    margin: 20px 50px;
+  }
+
+  button {
+    font-size: 14px; /* fallback */
+    font-size: var(--desktop-font-size);
+  }
+
+  button#logIn {
+    margin: 40px 0 0 0;
+  }
+
+  h1 {
+    font-size: 28px;
+    font-size: calc(2 * var(--desktop-font-size));
+    font-weight: 500;
+    margin: 0 0 80px 0;
+  }
+
+  input {
+    font-size: 14px; /* fallback */
+    font-size: var(--desktop-font-size);
+  }
+
+  label {
+    font-size: 14px; /* fallback */
+    font-size: var(--desktop-font-size);
+  }
+}
+
+@media (min-width: 800px) {
+  body {
+    margin: 50px;
+  }
 }
