--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -28,6 +28,16 @@
     color: red;
 }
 
+.tracker-box {
+    font-size: 14px;
+    letter-spacing: 0.09em;
+    padding: 5px;
+}
+
+.tracker-box div {
+    padding: 2px;
+}
+
 /* Button styles */
 button {
     background-color: #eee;
