--- a/src/styles/EmailVerification.css
+++ b/src/styles/EmailVerification.css
@@ -1,8 +1,12 @@
 .verify-container {
     display: flex;
-    /* margin: 0 auto; */
-    /* max-width: 500px; */
-    padding: 20px;
-    align-items: 60%;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    text-align: center;
+    height: 50vh;
+}
+
+.verify-container > * {
+    margin-bottom: 20px;
 }
