a lot of bug fixing, fleshing out the notification system, cleaned up the auth context to make it more readable and got rid of repeating code, finished everything a member role needed to see

--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -115,8 +115,12 @@ hr {
     margin: 1.5rem 0;
 }
 
-.form-element.google-button {
-    width: 100%;
-    align-items: center;
+section:has(.google-button) {
+    display: flex;
     justify-content: center;
+}
+
+.google-button {
+    width: auto !important;
+    padding: 0.5rem;
 }
