--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -8,43 +8,44 @@ body {
 
 .landingContainer {
     background-image: url("../images/cover.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     height: 100vh;
     width: 100%;
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding-top: 20vh;
+    flex-direction: column;
+}
+
+.navbarContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
 }
 
 .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     padding: 2rem;
     color: #000000;
     background-color: rgba(211, 211, 211, 0.7);
     border-radius: 5px;
     max-width: 500px;
-    max-height: 80vh;
+    text-align: center;
 }
 
 .content h3 {
     font-size: 2rem;
     margin-bottom: 1rem;
-    text-align: center;
-}
-
-.content p {
-    font-size: 1.2rem;
-    max-width: 600px;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: #000000;
 }
 
 .cta-button {
@@ -56,7 +57,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    align-self: center;
+    margin-top: 1rem;
 }
 
 .cta-button:hover {
