--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .signup-form {
     width: 100%;
     max-width: 400px;
     background-color: #f9f9f9;
-    padding: 2rem;
+    padding: 1.5rem;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -55,27 +55,37 @@ label {
 
 .password-input-container input {
     width: 100%;
-    padding-right: 70px;
+    padding-right: 95px;
 }
 
 .show-password-button {
     position: absolute;
-    right: 10px;
+    right: 5px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
     background: none;
     border: none;
     z-index: 2;
+    width: 66px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .password-info-icon {
     position: absolute;
-    right: 40px;
+    right: 75px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
     z-index: 2;
+    width: 18px;
+    height: 27px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .password-requirements-popup {
@@ -89,6 +99,8 @@ label {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 3;
     display: none;
+    width: max-content;
+    max-width: 250px;
 }
 
 .password-info-icon:hover .password-requirements-popup {
